[gd_scene format=3 uid="uid://buaupekv21cdk"]

[ext_resource type="Texture2D" uid="uid://c0vk517yvkotl" path="res://assets/lady_coworker_1/lady_coworker_1.png" id="1_c4dli"]
[ext_resource type="Script" uid="uid://cl681e8dmhhgp" path="res://Woman/woman.gd" id="1_ou70t"]
[ext_resource type="Texture2D" uid="uid://cwhtpm55ucnje" path="res://assets/lady_coworker_1/lady_coworker_1_mouth_1.png" id="2_ou70t"]
[ext_resource type="Texture2D" uid="uid://c55ptxcxetylt" path="res://assets/lady_coworker_1/lady_coworker_1_mouth_2.png" id="3_c26ro"]
[ext_resource type="Texture2D" uid="uid://cdkcef6mm56am" path="res://assets/lady_coworker_1/lady_coworker_1_mouth_3.png" id="4_8nppi"]
[ext_resource type="Texture2D" uid="uid://b1jhafce686bh" path="res://assets/pointed_textbox.png" id="6_c26ro"]

[sub_resource type="Animation" id="Animation_bnpmw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Sprite2D2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sprite2D3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Sprite2D4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nf7x4"]
resource_name = "YAPPER"
length = 0.2
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Sprite2D2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sprite2D3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Sprite2D4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3nw3"]
_data = {
&"RESET": SubResource("Animation_bnpmw"),
&"YAPPER": SubResource("Animation_nf7x4")
}

[node name="WOMAN" type="Node2D" unique_id=2059120683]
script = ExtResource("1_ou70t")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1157636513]
position = Vector2(1919.9998, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_c4dli")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D" unique_id=1337134389]
texture = ExtResource("2_ou70t")

[node name="Sprite2D3" type="Sprite2D" parent="Sprite2D" unique_id=1711975698]
visible = false
texture = ExtResource("3_c26ro")

[node name="Sprite2D4" type="Sprite2D" parent="Sprite2D" unique_id=1644284029]
visible = false
texture = ExtResource("4_8nppi")

[node name="StaringPos" type="Marker2D" parent="Sprite2D" unique_id=349888799]
position = Vector2(1919.9998, 0)

[node name="EndingPos" type="Marker2D" parent="Sprite2D" unique_id=1639694754]
position = Vector2(-6.1035156e-05, 0)

[node name="AUSD" type="Sprite2D" parent="Sprite2D" unique_id=1564914468]
visible = false
z_index = 2
position = Vector2(-1440, 127.99996)
rotation = 0.5235988
scale = Vector2(0.59999996, 0.59999996)
texture = ExtResource("6_c26ro")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1696730117]
libraries/ = SubResource("AnimationLibrary_x3nw3")

[node name="Timer" type="Timer" parent="." unique_id=8081348]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
